# flat-hypercube

./: Cargo.toml  README.md  default_prefs.json
.github/workflows/: builds.yml
src/: filters.rs  layout.rs  lib.rs  main.rs  prefs.rs  puzzle.rs  state.rs
