[package]
name = "flat-hypercube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.12.1"
rand = "0.8.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.127"
rgb2ansi256 = "0.1"
